adding video backgrounds

--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@ crossorigin="anonymous"></script>
 
   <div class="jumbotron jumbotron-fluid">
 
-    <video autoplay muted loop poster="">    
-        <source src="" data-src="" type="video/mp4">
+    <video autoplay muted loop poster="assets/videos/community.mp4">    
+        <source src="assets/videos/community.mp4" data-src="assets/videos/community.mp4" type="video/mp4">
 
     </video>
     
