--- a/activism.html
+++ b/activism.html
@@ -53,8 +53,8 @@ crossorigin="anonymous"></script>
 
   <div class="jumbotron jumbotron-fluid">
 
-    <video autoplay muted loop poster="">    
-        <source src="" data-src="" type="video/mp4">
+    <video autoplay muted loop poster="assets/videos/typingVideo.mp4">    
+        <source src="assets/videos/typingVideo.mp4" data-src="assets/videos/typingVideo.mp4" type="video/mp4">
 
     </video>
     
@@ -62,7 +62,7 @@ crossorigin="anonymous"></script>
     
         <div class="container">
             <div class="headertext">
-            <h1 class="display-4">ACTIVISIM</h1>
+            <h1 class="display-4">ACTIVISM</h1>
             <h1 class="display-4">AND</h1>
             <h1 class="display-4">SOCIAL RESPONSIBILITY</h1>
             <p class="lead"> SAMPLE TEXT: Join our fight for a better future.</p>
