--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <!--main header-->
 <div class="homepage jumbotron jumbotron-fluid">
 
-  <video autoplay muted loop poster="">    
-      <source src="" data-src="" type="video/mp4">
+  <video autoplay muted loop poster="assets/videos/leafVideo.mp4">    
+      <source src="assets/videos/leafVideo.mp4" data-src="assets/videos/leafVideo.mp4" type="video/mp4">
 
   </video>
   <!-- <div class="homepage jumbotron jumbotron-fluid"> -->
